--- a/Lab10_MVC/Views/Home/Index.cshtml
+++ b/Lab10_MVC/Views/Home/Index.cshtml
@@ -16,7 +16,8 @@
     <section class="form-section">
         <h1>@greeting!</h1>
 
-        <form method="post">
+        @* Use get or post method in form? And 'action' attr in form is path to where I want to send the form input to, namely Results view *@
+        <form method="get" action="Home/Results">
             <label for="WinePrice">Wine Price</label>
             <input type="text" maxlength="10" name="WinePrice" />
 
