Add working query, Results view (needs more styling)

--- a/Lab10_MVC/Views/Home/Index.cshtml
+++ b/Lab10_MVC/Views/Home/Index.cshtml
@@ -1,8 +1,5 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-    string greeting = "Hiya!";
+﻿@{
+    string greeting = "Welcome!";
 }
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -14,7 +11,7 @@
 <body class="bg">
 
     <section class="form-section">
-        <h1>@greeting!</h1>
+        <h1>@greeting</h1>
 
         @* Use get or post method in form? And 'action' attr in form is path to where I want to send the form input to, namely Results view *@
         <form method="post">
