--- a/Lab10_MVC/wwwroot/Styles/StyleSheet.css
+++ b/Lab10_MVC/wwwroot/Styles/StyleSheet.css
@@ -11,26 +11,34 @@ body {
     height: 100%;
     margin: auto;
 }
-section {
-    width: 40vw;
-    min-width: inherit;
-    max-width: 250px;
+a {
+    /* TODO Add rules here */
+}
+p {
+    padding: 10px;
+    color: black;
+}
+div {
+    padding: 10px;
+    border: solid 4px;
     margin: auto;
-    position: relative;
-    background-color:dimgrey;
-    opacity: 0.4;
-    align-content: center;
-    vertical-align: central;
-    /*top: 50%;*/
-    /*left: 50%;*/
-
+    color: black;
 }
 form {
     text-align:center;
     position: absolute;
 }
 .form-section {
-
+    width: 40vw;
+    min-width: inherit;
+    max-width: 250px;
+    margin: auto;
+    position: relative;
+    background-color:dimgrey;
+    align-content: center;
+    vertical-align: central;
+    /*top: 50%;*/
+    /*left: 50%;*/
 }
 .bg {
     background-image: url("../Assets/Nebbiolo_Barbaresco.jpg");
