--- a/Lab10_MVC/wwwroot/Styles/StyleSheet.css
+++ b/Lab10_MVC/wwwroot/Styles/StyleSheet.css
@@ -1,6 +1,5 @@
 ﻿html {
     box-sizing: border-box;
-    color: black;
     height: 100vh;
 }
 * {
@@ -10,6 +9,7 @@ body {
     width: 100%;
     height: 100%;
     margin: auto;
+    color: black;
 }
 a {
     /* TODO Add rules here */
@@ -34,7 +34,7 @@ form {
     max-width: 250px;
     margin: auto;
     position: relative;
-    background-color:dimgrey;
+    /*background-color:gray;*/
     align-content: center;
     vertical-align: central;
     /*top: 50%;*/
