Move Wine class to Models directory; add image attribution

--- a/Lab10_MVC/Views/Home/Results.cshtml
+++ b/Lab10_MVC/Views/Home/Results.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Lab10_MVC.Classes.Wine>
+﻿@model IEnumerable<Lab10_MVC.Models.Wine>
 @{
     string resultsMessage = "Here are the wines we found!";
 }
@@ -22,6 +22,8 @@
     </div>
 
     <a asp-controller="Home" asp-action="Index">Back to Search</a>
+    <br />
+    <a href="https://www.michaelcurtisphotography.com/">Background image copyright 2019 Michael Curtis Photography</a>
 
 </body>
 </html>
