--- a/Lab10_MVC/wwwroot/Styles/StyleSheet.css
+++ b/Lab10_MVC/wwwroot/Styles/StyleSheet.css
@@ -24,6 +24,10 @@ div {
     margin: auto;
     color: black;
 }
+h1 {
+    font-size: 18;
+    font-weight: 700; 
+}
 form {
     text-align:center;
     position: absolute;
